--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,4 +53,5 @@
     <color name="gray">#424242</color>
     <color name="bt_very_light_gray">#E2E2E3</color>
     <color name="blueRandom">#2bc5b4</color>
+    <color name="red">#FF2C1D</color>
 </resources>
