--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,12 +52,13 @@
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/email"
+                        android:id="@+id/phone"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/muli"
-                        android:hint="Email"
-                        android:inputType="textEmailAddress"
+                        android:maxLength="10"
+                        android:hint="Phone"
+                        android:inputType="phone"
                         android:paddingLeft="7.0dip"
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -155,7 +156,7 @@
                     <Button
                         android:layout_marginBottom="10dp"
                         android:id="@+id/registerFromLogin"
-                        android:onClick="signUp"
+                        android:onClick="signUpClick"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/buttonmain"
