--- a/app/src/main/res/layout/row_home_category.xml
+++ b/app/src/main/res/layout/row_home_category.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="90dp"
-    android:layout_height="90dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_marginEnd="@dimen/item_space"
     android:layout_marginBottom="@dimen/item_space">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintDimensionRatio="H,1:1"
-        card_view:layout_constraintLeft_toLeftOf="parent"
-        card_view:layout_constraintRight_toRightOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/rootLayout"
+            android:id="@+id/cardView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
@@ -25,38 +18,38 @@
             card_view:cardElevation="1dp"
             card_view:cardUseCompatPadding="false">
 
-            <RelativeLayout
+            <LinearLayout
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="6dp">
+                android:padding="5dp">
 
                 <ImageView
                     android:id="@+id/image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="90dp"
+                    android:layout_height="80dp"
                     android:layout_above="@+id/text"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/app_name"
                     android:src="@drawable/placeholder" />
 
                 <TextView
-                    android:id="@+id/text"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/title"
+                    android:gravity="center"
+                    android:layout_width="95dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginEnd="3dp"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="@string/app_name"
                     android:textColor="@color/black"
                     android:textSize="13sp" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
