--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -3,6 +3,23 @@
 
     <group android:checkableBehavior="single">
 
+        <item
+            android:id="@+id/menu_go_home"
+            android:checked="false"
+            android:icon="@drawable/ic_categories"
+            android:title="Home" />
+
+        <item
+            android:id="@+id/menu_go_address"
+            android:checked="false"
+            android:icon="@drawable/ic_categories"
+            android:title="Address" />
+
+        <item
+            android:id="@+id/menu_go_profile"
+            android:checked="false"
+            android:icon="@drawable/ic_profile"
+            android:title="My Account" />
 
         <item
             android:id="@+id/menu_go_category"
@@ -12,16 +29,22 @@
 
 
         <item
-            android:id="@+id/menu_go_profile"
-            android:checkable="false"
-            android:icon="@drawable/ic_profile"
-            android:title="Profile" />
-
-        <item
-            android:id="@+id/menu_go_setting"
+            android:id="@+id/menu_go_help"
             android:checked="false"
             android:icon="@drawable/ic_setting"
-            android:title="Setting" />
+            android:title="Help &amp; Support" />
+
+        <item
+            android:id="@+id/menu_go_terms"
+            android:checked="false"
+            android:icon="@drawable/ic_setting"
+            android:title="Terms &amp; Condition" />
+
+        <item
+            android:id="@+id/menu_go_about"
+            android:checked="false"
+            android:icon="@drawable/ic_setting"
+            android:title="About Us" />
 
 
         <item
