--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,9 +44,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/ll_banner"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="vertical">
+
   <androidx.cardview.widget.CardView
+      android:id="@+id/cardView"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       app:cardCornerRadius="5dp"
       android:layout_margin="10dp"
       android:elevation="3dp">
@@ -54,9 +61,10 @@
     <com.glide.slider.library.SliderLayout
         android:id="@+id/slider"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="match_parent" />
 
   </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
   <RelativeLayout
       android:layout_width="match_parent"
@@ -110,12 +118,83 @@
         android:textSize="13sp" />
   </RelativeLayout>
 
-  <ImageView
-      android:layout_marginTop="5dp"
-      android:layout_width="match_parent"
-      android:src="@drawable/a"
-      android:scaleType="center"
-      android:layout_height="350dp"/>
+      <LinearLayout
+          android:id="@+id/ll_banner_promo"
+          android:layout_width="match_parent"
+          android:layout_height="240dp"
+          android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="10dp"
+            android:elevation="3dp">
+
+          <com.glide.slider.library.SliderLayout
+              android:id="@+id/promo_slider"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent" />
+
+        </androidx.cardview.widget.CardView>
+      </LinearLayout>
+
+      <RelativeLayout
+          android:layout_marginTop="5dp"
+          android:background="#61FFFFFF"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="start"
+            android:orientation="vertical">
+
+          <TextView
+              android:textAllCaps="true"
+              android:layout_gravity="center"
+              fontPath="fonts/customBold.otf"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Top Selling Brand"
+              android:fontFamily="@font/muli_extrabold"
+              android:textColor="@color/gray"
+              android:textSize="16sp"
+              android:textStyle="bold" />
+          <View
+              android:layout_gravity="center"
+              android:layout_width="180dp"
+              android:layout_height="2dp"
+              android:layout_marginTop="5dp"
+              android:background="@color/colorPrimary" />
+
+
+
+          <androidx.recyclerview.widget.RecyclerView
+              android:id="@+id/recyclerViewMerchant"
+              android:scrollbarSize="0dp"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:visibility="gone"
+            android:layout_margin="10dp"
+            android:id="@+id/textMerchantViewAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/muli_semibold"
+            android:layout_alignParentEnd="true"
+            android:text="View All"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+      </RelativeLayout>
 
     </LinearLayout>
   </androidx.core.widget.NestedScrollView>
