--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,8 +57,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/muli"
                         android:maxLength="10"
-                        android:hint="Phone"
-                        android:inputType="phone"
+                        android:hint="Email"
+                        android:inputType="textEmailAddress"
                         android:paddingLeft="7.0dip"
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
