--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,17 +23,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="?actionBarSize"
                 android:padding="@dimen/appbar_padding"
                 android:src="@drawable/ic_baseline_arrow_back_24" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="My Cart"
-                android:fontFamily="@font/muli_extrabold"
-                android:textSize="16sp" />
+            <EditText
+                android:id="@+id/inputSearch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/white_button"
+                android:hint="@string/home_search_keyword"
+                android:focusable="true"
+                android:imeOptions="actionSearch"
+                android:paddingStart="10dp"
+                android:drawablePadding="5dp"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textColorHint="@color/home_search_hint"
+                android:textSize="15sp" />
 
 
         </LinearLayout>
