--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -6,10 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".WebViewActivity">
 
+<!--    <LinearLayout-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:orientation="vertical">-->
+
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+<!--    </LinearLayout>-->
 
 </RelativeLayout>
