--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
   <EditText
       android:id="@+id/edt_search"
       android:layout_width="match_parent"
+      android:focusable="false"
       android:layout_height="wrap_content"
       android:layout_marginStart="20dp"
       android:layout_marginTop="12dp"
@@ -25,7 +26,7 @@
       android:background="@drawable/white_button"
       android:drawableStart="@drawable/ic_search"
       android:drawablePadding="8dp"
-      android:hint="@string/home_search_keyword"
+      android:hint="Search Product List"
       android:imeOptions="actionSearch"
       android:inputType="textPersonName"
       android:padding="10dp"
