--- a/app/src/main/res/layout/list_group_child.xml
+++ b/app/src/main/res/layout/list_group_child.xml
@@ -10,7 +10,7 @@
         android:id="@+id/lblListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/lato"
+        android:fontFamily="@font/muli"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
 
 </LinearLayout>
