--- a/app/src/main/res/layout/list_group_header.xml
+++ b/app/src/main/res/layout/list_group_header.xml
@@ -5,20 +5,21 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/image"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:layout_width="25dp"-->
-<!--        android:layout_margin="10dp"-->
-<!--        android:layout_height="25dp"-->
-<!--        android:src="@drawable/ic_categories"/>-->
+    <ImageView
+        android:id="@+id/image"
+        android:layout_gravity="center"
+        android:layout_width="25dp"
+        android:layout_margin="10dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_categories"/>
 
     <TextView
         android:id="@+id/lblListHeader"
+        android:layout_marginStart="5dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
         android:textSize="16sp"
-        android:fontFamily="@font/lato"/>
+        android:fontFamily="@font/muli_semibold"/>
 
 </LinearLayout>
