--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -40,10 +40,75 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <LinearLayout
+        android:background="@color/bt_very_light_gray"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txt_item"
+            android:layout_width="0dp"
+            android:gravity="end"
+            android:textSize="16sp"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/muli_extrabold"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Item 0"/>
+        <View
+            android:layout_width="1dp"
+            android:textSize="16sp"
+            android:layout_gravity="center"
+            android:background="@color/light_gray"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/txt_total_price"
+            android:layout_width="wrap_content"
+            android:textSize="16sp"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/muli_extrabold"
+            android:layout_height="wrap_content"
+            android:text="Item 0"/>
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <LinearLayout
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txt_total"
+            android:layout_width="0dp"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/muli_extrabold"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Item 0"/>
+        <View
+            android:layout_width="1dp"
+            android:textSize="16sp"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_next"
+            android:layout_width="30dp"
+            android:layout_margin="20dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_arrow_forward_white_24dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
