--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".CartActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -41,6 +41,11 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
+        android:id="@+id/ll_hascart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <LinearLayout
         android:background="@color/bt_very_light_gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,7 +75,7 @@
             android:layout_margin="10dp"
             android:fontFamily="@font/muli_extrabold"
             android:layout_height="wrap_content"
-            android:text="Item 0"/>
+            android:text="Rs. 0"/>
 
     </LinearLayout>
 
@@ -102,13 +107,59 @@
             android:layout_gravity="center"
             android:background="@color/white"
             android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/img_next"
             android:layout_width="30dp"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_arrow_forward_white_24dp"/>
+            android:onClick="nextClick"
+            android:src="@drawable/ic_arrow_forward_white_24dp" />
 
     </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:gravity="center"
+        android:id="@+id/ll_emptycart"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_marginBottom="40dp"
+            android:src="@drawable/empty_cart"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your cart is empty"
+            android:textColor="@color/gray"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/muli_extrabold"
+            android:textSize="26sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:fontFamily="@font/muli"
+            android:layout_marginBottom="50dp"
+            android:layout_height="wrap_content"
+            android:text="You have no items in your shopping cart. \nLet's go buy something!"/>
+
+        <Button
+            android:onClick="homeGo"
+            android:layout_width="wrap_content"
+            android:background="@color/colorPrimary"
+            android:paddingStart="20dp"
+            android:fontFamily="@font/muli_bold"
+            android:paddingEnd="20dp"
+            android:layout_height="wrap_content"
+            android:text="SHOP NOW"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
