--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -28,6 +28,7 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_weight="1"
+                android:popupBackground="@color/colorPrimary"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
 
