--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context=".ProductListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -43,15 +44,31 @@
                 android:paddingBottom="@dimen/appbar_padding"
                 android:src="@drawable/ic_baseline_search_24" />
 
-            <ImageView
-                android:onClick="cartClick"
-                android:id="@+id/cart"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
                 android:minHeight="?actionBarSize"
                 android:padding="@dimen/appbar_padding"
-                android:src="@drawable/cart" />
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:onClick="cartClick"
+                    android:id="@+id/cart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:src="@drawable/cart" />
+                <TextView
+                    android:id="@+id/cart_item"
+                    android:textColor="@color/white"
+                    android:layout_toRightOf="@id/cart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle"
+                    android:paddingStart="5dp"
+                    android:textSize="9dp"
+                    android:paddingEnd="5dp"
+                    android:text="0"/>
+            </RelativeLayout>
+
 
         </LinearLayout>
 
@@ -64,10 +81,55 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
+        android:layout_below="@+id/appbar"
+        android:layout_above="@+id/ll_cart"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <LinearLayout
+        android:id="@+id/ll_cart"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txt_item"
+            android:layout_width="0dp"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/muli_extrabold"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Item 0"/>
+        <TextView
+            android:id="@+id/txt_total"
+            android:layout_width="wrap_content"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/muli_extrabold"
+            android:layout_height="wrap_content"
+            android:text="Rs. 0"/>
+        <View
+            android:layout_width="1dp"
+            android:textSize="16sp"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:layout_height="match_parent" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <ImageView
+            android:id="@+id/img_next"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:onClick="nextClick"
+            android:src="@drawable/ic_arrow_forward_white_24dp" />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
