--- a/app/src/main/res/layout/row_category.xml
+++ b/app/src/main/res/layout/row_category.xml
@@ -3,14 +3,12 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/item_space"
     android:layout_marginBottom="@dimen/item_space">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintDimensionRatio="H,1:1"
         card_view:layout_constraintLeft_toLeftOf="parent"
         card_view:layout_constraintRight_toRightOf="parent"
         card_view:layout_constraintTop_toTopOf="parent">
@@ -19,7 +17,7 @@
             android:id="@+id/rootLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="1dp"
+            android:layout_margin="2dp"
             card_view:cardBackgroundColor="@color/white"
             card_view:cardCornerRadius="5dp"
             card_view:cardElevation="1dp"
