--- a/app/src/main/res/layout/row_product_list.xml
+++ b/app/src/main/res/layout/row_product_list.xml
@@ -38,6 +38,7 @@
                     android:textColor="@color/gray"
                     android:textSize="15sp" />
         <ImageView
+            android:visibility="gone"
             android:id="@+id/img_fav"
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -45,20 +46,16 @@
             android:src="@drawable/heart" />
         </LinearLayout>
 
-        <TextView
-            android:layout_marginBottom="5dp"
-            android:id="@+id/txt_quantity"
-            android:layout_marginEnd="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Quantity - 500 Grams"
-            android:padding="5dp"
-            android:textSize="13sp"
-            android:fontFamily="@font/muli_semibold"
-            android:layout_marginLeft="10dp"
+        <Spinner
             android:layout_marginTop="3dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginStart="10dp"
-            android:background="@drawable/edit_text_border"/>
+            android:padding="5dp"
+            android:layout_marginEnd="10dp"
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:background="@drawable/edit_text_border"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:gravity="center"
