--- a/app/src/main/res/layout/row_toolbar.xml
+++ b/app/src/main/res/layout/row_toolbar.xml
@@ -17,7 +17,7 @@
     <RelativeLayout
         android:id="@+id/rl_cart"
         android:onClick="cartClick"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:minHeight="?actionBarSize"
         android:padding="@dimen/appbar_padding"
