--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -131,7 +131,8 @@
             android:layout_width="170dp"
             android:layout_height="170dp"
             android:layout_marginBottom="40dp"
-            android:src="@drawable/empty_cart"/>
+            android:src="@drawable/empty_cart"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
