--- a/app/src/main/res/layout/activity_pincode.xml
+++ b/app/src/main/res/layout/activity_pincode.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/gradient_tb"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".PincodeActivity">
 
@@ -47,12 +47,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/gray"
         android:textSize="20sp"
         android:inputType="number"
         android:maxLength="6"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/gray"
+        android:textColorHint="@color/light_gray"
         android:fontFamily="@font/muli_semibold"
         android:hint="Enter Your Pin Code"
         android:layout_centerInParent="true"
@@ -66,8 +66,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
-        android:textColor="@color/colorPrimary"
-        android:background="@drawable/round_button_white"
+        android:textColor="@color/white"
+        android:background="@drawable/round_button"
         android:layout_marginRight="30dp"
         android:text="Submit"/>
 </RelativeLayout>
