--- a/app/src/main/res/layout/list_group_child.xml
+++ b/app/src/main/res/layout/list_group_child.xml
@@ -3,14 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/lblListItem"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:fontFamily="@font/muli"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft" />
+
+    <ImageView
+        android:id="@+id/icon_subheader"
+        android:layout_gravity="center"
+        android:layout_width="15dp"
+        android:layout_marginEnd="20dp"
+        android:layout_height="15dp" />
 
 </LinearLayout>
