--- a/app/src/main/res/layout/list_group_header.xml
+++ b/app/src/main/res/layout/list_group_header.xml
@@ -5,21 +5,23 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_gravity="center"
-        android:layout_width="25dp"
-        android:layout_margin="10dp"
-        android:layout_height="25dp"
-        android:src="@drawable/ic_categories"/>
-
     <TextView
         android:id="@+id/lblListHeader"
-        android:layout_marginStart="5dp"
-        android:layout_width="match_parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="?attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
         android:textSize="16sp"
-        android:fontFamily="@font/muli_semibold"/>
+        android:fontFamily="@font/muli"/>
+
+    <ImageView
+        android:id="@+id/icon_header"
+        android:layout_gravity="center"
+        android:layout_width="17dp"
+        android:layout_marginEnd="20dp"
+        android:layout_height="17dp" />
 
 </LinearLayout>
