Side drawer completed

--- a/app/src/main/res/layout/row_order_product_list.xml
+++ b/app/src/main/res/layout/row_order_product_list.xml
@@ -126,6 +126,7 @@
         </LinearLayout>
 
         <Button
+            android:visibility="gone"
             android:id="@+id/btn_return"
             android:layout_gravity="end"
             android:layout_margin="5dp"
