--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -23,7 +23,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -142,12 +142,10 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
+                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp">
 
@@ -155,24 +153,46 @@
                     android:visibility="visible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Order Status - "
-                    android:textSize="14sp"
+                    android:text="Order Status/History :- "
+                    android:textSize="16sp"
                     android:fontFamily="@font/muli_extrabold" />
-
-                <TextView
-                    android:id="@+id/order_status"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:gravity="end"
-                    android:textSize="14sp"
-                    android:fontFamily="@font/muli_extrabold"
-                    android:textColor="@color/colorPrimary"
-                    />
-
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_marginTop="3dp"
+    android:background="@color/bt_very_light_gray"/>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/his_date"
+                    android:fontFamily="@font/muli"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="10dp"
+                    android:ellipsize="end"
+                    android:text=""
+                    android:textSize="13sp" />
+                <TextView
+                    android:id="@+id/his_status"
+                    android:fontFamily="@font/muli_semibold"
+                    android:layout_width="0dp"
+                    android:lineSpacingExtra="10dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <View
@@ -290,6 +310,18 @@
                     android:text="0"/>
 
             </LinearLayout>
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/btn_cancel"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_button"
+                android:text="Cancel Order"/>
+
         </LinearLayout>
 
     </RelativeLayout>
